feat: contentEditable 기능 추가

--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -46,6 +46,14 @@
   display: none;
 }
 
+.visible-off {
+  visibility: hidden;
+}
+
+.visible-on {
+  visibility: visible;
+}
+
 .depth0 {
   padding-left: 15px;
 }
