--- a/style/editor.css
+++ b/style/editor.css
@@ -2,18 +2,23 @@
 #not-found-page {
   height: calc(100vh - 150px);
 }
+
 .editor-header {
   height: 45px;
 }
 .editor-header-title {
-  height: 20px;
+  height: 1.5rem;
+  font-size: 1rem;
 }
-
+.editor-header-dash {
+  color: rgba(55, 53, 47, 0.08);
+}
 .editor-header-title:hover {
   background-color: rgba(55, 53, 47, 0.08);
   border: 0.5px solid rgba(55, 53, 47, 0.08);
   border-radius: 3px;
 }
+
 .editor-title {
   height: 50px;
   font-size: 36px;
@@ -22,6 +27,31 @@
   outline: none;
 }
 
+.editor-btn-box {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px;
+  padding: 0 3px;
+
+  border-radius: 3px;
+  background-color: white;
+  box-shadow: rgb(15 15 15 / 5%) 0px 0px 0px 1px, rgb(15 15 15 / 10%) 0px 3px 6px,
+    rgb(15 15 15 / 20%) 0px 9px 24px;
+}
+.editor-btn {
+  min-width: 25px;
+  text-align: center;
+  background-color: white;
+  border: 0.5px solid rgba(55, 53, 47, 0.08);
+  border-radius: 3px;
+}
+.editor-btn:hover {
+  background-color: rgba(55, 53, 47, 0.08);
+  border: 0.5px solid rgba(55, 53, 47, 0.08);
+  border-radius: 3px;
+}
 .editor-content {
   height: calc(100vh - 150px);
   font-size: 16px;
