--- a/style/utils.css
+++ b/style/utils.css
@@ -51,6 +51,10 @@
   align-items: center;
 }
 
+.items-baseline {
+  align-items: baseline;
+}
+
 .self-start {
   align-self: flex-start;
 }
@@ -148,6 +152,10 @@
 
 .py-10 {
   padding: 0 10px;
+}
+
+.py-15 {
+  padding: 0 15px;
 }
 
 .py-20 {
